# odc-sync-wrapper

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_PYTHON_SCRIPTS.md  README_concurrency_explanation.md  dependency-reduced-pom.xml  load-test-suite.py  load-test.py  pom.xml  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
benchmarking/: __init__.py  __main__.py
benchmarking-async/: README.md  __init__.py  __main__.py  initialize_sample_data.py  requirements.txt
benchmarking-async/cli/: __init__.py  single.py  sweep.py
benchmarking-async/core/: __init__.py  async_tester.py  models.py  sample_loader.py
benchmarking-async/examples_dir/plain/: sample.txt
benchmarking-async/results/: __init__.py  aggregator.py  charts.py
benchmarking-async/sweeps/: __init__.py  file_size_sweep.py
benchmarking/cli/: __init__.py  load_test.py  sweep.py  test_suite.py
benchmarking/core/: __init__.py  load_tester.py  models.py  sample_loader.py
benchmarking/docker/: __init__.py  container_manager.py
benchmarking/results/: __init__.py  aggregator.py  charts.py
benchmarking/sweeps/: __init__.py  datasource_sweep.py  presets.py
samples/macnica/: testfile.docx  testfile.pptx  testfile.txt  testfile.xlsx  testfile_ocr.docx  testfile_ocr.pptx  testfile_ocr.xlsx
src/main/java/com/odc/speedcheck/: ClassificationController.java  ClassificationServerApp.java  DatasourceContext.java  DxrClient.java  FileBatchingService.java  JobTask.java  SpeedCheckApp.java
src/main/resources/: application.properties
(+37 files in other folders)
